--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-1-html-css-estrututas-de-pagina/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-1-html-css-estrututas-de-pagina/index.html
@@ -10,11 +10,17 @@
     <p>Que lindo dia para aprender <br> <strong>Com muito esforço e
     dedicação</strong> vou me tornar uma pessoa desenvolvedora muito capaz</p>
     <ul>
-        <li>Gabriel</li>
-        <li>Carol</li>
-        <li>Felipe</li>
-        <li>Fábio</li>
+        <li><a href="#Gabriel">Gabriel</a></li>
+        <li><a href="#Carol">Carol</a></li>
+        <li><a href="#Felipe">Felipe</a></li>
+        <li><a href="#Fábio">Fábio</a></li>
     </ul>
     <img src="pinkfloyd.webp" alt="okok" width="300px">
+    <p id="Gabriel">Gabriel</p>
+    <p id="Carol">Carol</p>
+    <p id="Felipe">Felipe</p>
+    <p id="Fábio">Fábio</p>
+
+    <a href="https://www.google.com.br/" target="_blank">Google</a>
   </body>
 </html>
